--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My First Ever Website</h1>
+    <h1> My first ever website </h1>
+    <h3>I opened a repository</h3>
 </body>
 </html>
